fix gap on card for mobile screens

--- a/src/styles/shared/_card.scss
+++ b/src/styles/shared/_card.scss
@@ -20,9 +20,13 @@
     margin-bottom: 0;
   }
 
-  img {
-    width: 100%;
-    height: auto;
+  .image {
+    display: flex;
+
+    img {
+      width: 100%;
+      height: auto;
+    }
   }
 
   .content {
